...
    return (
      <>
        <Stack.Screen
          options={{
            headerRight: () => (
              <Button
                testID="notes-btn-create"
                size="sm"
                onPress={() => router.push('/(authenticated)/notes/form')}
              >
                {t('newNote')}
              </Button>
            ),
...
        />
      </>
    );
  }

  return (
    <View testID="notes-list" className="flex-1">
      <Stack.Screen
        options={{
          headerRight: () => (
            <Button
              testID="notes-btn-create"
              size="sm"
...
